--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.Pruebas"
         tools:targetApi="31">
         <activity
+            android:name=".EditPerfilActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".PerfilActivity"
             android:exported="true">
             <intent-filter>
