--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Pruebas"
         tools:targetApi="31">
         <activity
+            android:name=".GarajeActivity"
+            android:exported="false" />
+        <activity
             android:name=".RutasActivity"
             android:exported="true">
             <intent-filter>
