--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pruebas"
         tools:targetApi="31">
+
+        <activity
+            android:name=".SplashActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -22,7 +26,7 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".GaajeActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
